# 6502CPP

./: .editorconfig  .gitignore  6502 Emulator.sln  6502.h  CMakeLists.txt  Processor.code-workspace
6502 Emulator.xcworkspace/: contents.xcworkspacedata
6502 Emulator.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
CMake/: BuildImGui.cmake.in  BuildImGui.cmake.in.old  Common.cmake  Config.cmake.in  FindGLFW3.cmake  Findimgui.cmake  GetImgui.cmake  Modules.cmake.in  _FindProcessor.cmake  _Findimgui.cmake
NES/: APU.cpp  APU.hpp  Audio.cpp  Audio.hpp  CMakeLists.txt  Cartridge.cpp  Cartridge.hpp  Graphics.cpp  Graphics.hpp  Mapper.cpp  Mapper.hpp  Mapper_000.cpp  Mapper_000.hpp  Mapper_001.cpp  Mapper_001.hpp  Mapper_002.cpp  Mapper_002.hpp  Mapper_003.cpp  Mapper_003.hpp  Mapper_004.cpp  Mapper_004.hpp  Mapper_066.cpp  Mapper_066.hpp  NESBus.cpp  NESBus.hpp  NESResources.cpp  NESResources.hpp  PPU.cpp  PPU.hpp
Processor/: 6502 Processor.vcxproj  6502 Processor.vcxproj.filters  Bus.cpp  Bus.hpp  CMakeLists.txt  CPU.cpp  CPU.hpp  Exceptions.hpp  Executioner.cpp  Executioner.hpp  Formatters.hpp  Instructions.cpp  Instructions.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  MainBus.cpp  MainBus.hpp  Operation.cpp  Operation.hpp  Processor.cpp  Processor.hpp  Singleton.hpp  Types.hpp
Processor/Instructions/: AddressMode.cpp  AddressMode.hpp  Instruction.cpp  Instruction.hpp  InstructionTable.cpp  InstructionTable.hpp
Processor/Processor/Processor/: main.cpp
Processor/Processor/Processor.xcodeproj/: project.pbxproj
Processor/Processor/Processor.xcodeproj/project.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
ProcessorTests/: 6502 Processor Tests.vcxproj  6502 Processor Tests.vcxproj.filters  CMakeLists.txt  FunctionalProcessorTests.cpp  FunctionalProcessorTests.hpp  MainTest.cpp  MainTest.hpp  ProcessorTests.cpp  ProcessorTests.hpp
ProcessorTests/Processor Tests.xcodeproj/: project.pbxproj
ProcessorTests/Processor Tests.xcodeproj/project.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
ProcessorTests/Processor Tests.xcodeproj/xcuserdata/txc.xcuserdatad/xcschemes/: xcschememanagement.plist
Simulator/: 6502 Simulator.vcxproj  CMakeLists.txt  Demo.cpp  Demo.m_m  Simulator.mm
Simulator/CMake/: BuildDemo.cmake  BuildImGuiDemo.cmake  BuildSimulator.cmake
Simulator/Simulator.xcodeproj/: project.pbxproj
Simulator/Simulator.xcodeproj/project.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
Simulator/Simulator.xcodeproj/xcuserdata/txc.xcuserdatad/xcschemes/: xcschememanagement.plist
Simulator/UIDemo/: main.m
UserInterfaces/: 6502 Simulator.vcxproj  6502 Simulator.vcxproj.filters  CMakeLists.txt
UserInterfaces/Demo/: CMakeLists.txt  Demo.cpp
UserInterfaces/ImGuiDemo/: CMakeLists.txt  ImGuiDemo.mm
UserInterfaces/Simulator/: CMakeLists.txt  Main.cpp  Simulator.cpp  Simulator.hpp
Workspaces/6502 Emulator.xcworkspace/: contents.xcworkspacedata
Workspaces/6502 Emulator.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
Workspaces/6502 Emulator.xcworkspace/xcuserdata/txc.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Workspaces/OLCPGE/OLCPGE.xcodeproj/: project.pbxproj
Workspaces/OLCPGE/OLCPGE.xcodeproj/project.xcworkspace/xcuserdata/txc.xcuserdatad/: UserInterfaceState.xcuserstate
Workspaces/OLCPGE/OLCPGE.xcodeproj/xcuserdata/txc.xcuserdatad/xcschemes/: xcschememanagement.plist
Workspaces/Projects/6502_Emulator.xcodeproj/: project.pbxproj
Workspaces/Projects/6502_Emulator.xcodeproj/xcshareddata/xcschemes/: Demo.xcscheme  ProcessorTests.xcscheme
Workspaces/Projects/6502_NES.xcodeproj/: project.pbxproj
Workspaces/Projects/6502_Processor.xcodeproj/: project.pbxproj
Workspaces/Projects/6502_Processor_Tests.xcodeproj/: project.pbxproj
Workspaces/Projects/6502_Processor_Tests.xcodeproj/xcshareddata/xcschemes/: ProcessorTests.xcscheme
Workspaces/Projects/6502_UserInterfaces.xcodeproj/: project.pbxproj
Workspaces/Projects/6502_UserInterfaces.xcodeproj/xcshareddata/xcschemes/: Simulator.xcscheme
Workspaces/Projects/_6502_NES.xcodeproj/: project.pbxproj
Workspaces/Projects/imgui.xcodeproj/: project.pbxproj
Workspaces/XCode/6502_NES.xcodeproj/: project.pbxproj
Workspaces/XCode/6502_NES.xcodeproj/xcshareddata/xcschemes/: NES.xcscheme
Workspaces/XCode/6502_Processor.xcodeproj/: project.pbxproj
Workspaces/XCode/6502_Processor.xcodeproj/xcshareddata/xcschemes/: Processor.xcscheme
Workspaces/XCode/6502_Processor_Tests.xcodeproj/: project.pbxproj
Workspaces/XCode/6502_Processor_Tests.xcodeproj/xcshareddata/xcschemes/: ProcessorTests.xcscheme
Workspaces/XCode/6502_UserInterfaces.xcodeproj/: project.pbxproj
Workspaces/XCode/6502_UserInterfaces.xcodeproj/xcshareddata/xcschemes/: Demo.xcscheme  ImGuiDemo.xcscheme  Simulator.xcscheme
Workspaces/XCode/imgui.xcodeproj/: project.pbxproj
Workspaces/XCode/imgui.xcodeproj/xcshareddata/xcschemes/: ImGui Metal.xcscheme  ImGui OpenGL.xcscheme
imgui/: CMakeLists.txt  imconfig.h
includes/: CMakeLists.txt
metal-cpp/: CMakeLists.txt
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ReRunCMake.make
xcode/Processor/: ProcessorTargets.cmake  cmake_install.cmake
xcode/Processor/CMakeScripts/: ReRunCMake.make
xcode/ProcessorTests/: CTestTestfile.cmake  DartConfiguration.tcl  ProcessorTargets.cmake  ProcessorTests_include-b12d07c.cmake  ProcessorTests_tests-b12d07c.cmake  cmake_install.cmake
xcode/ProcessorTests/CMakeScripts/: ReRunCMake.make
xcode/UserInterfaces/: DemoTargets.cmake  ImGuiDemoTargets.cmake  SimulatorTargets.cmake  cmake_install.cmake
xcode/UserInterfaces/CMakeScripts/: ReRunCMake.make
xcode/UserInterfaces/Demo/: cmake_install.cmake
xcode/UserInterfaces/ImGuiDemo/: cmake_install.cmake
xcode/UserInterfaces/Simulator/: cmake_install.cmake
xcode/includes/: cmake_install.cmake
xcode/includes/imgui/: cmake_install.cmake
xcode/includes/imgui/CMakeScripts/: ReRunCMake.make
(+15 files in other folders)
