CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(6502_Emulator VERSION 1.0.0 DESCRIPTION "6502 Emulator" LANGUAGES CXX)

OPTION(DEBUG "Enable debug (extensive logging)" OFF)
OPTION(VERBOSE "Enable verbosity" OFF)
OPTION(USE_TEST "Enable Tests" OFF)

IF(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(USE_TEST OFF)
ENDIF()

IF (VERBOSE)
  SET(CMAKE_VERBOSE_MAKEFILE ON)
  SET(CMAKE_RULE_MESSAGES OFF)
ENDIF()

IF (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
  IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(COVERAGE_COMPILE_FLAGS "--coverage -g -O0 -fno-inline -fno-inline-small-functions -fno-default-inline")
    SET(COVERAGE_LINK_FLAGS "--coverage")
  ENDIF()
ELSEIF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
  IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(COVERAGE_COMPILE_FLAGS "--coverage")
    SET(COVERAGE_LINK_FLAGS "--coverage")
  ENDIF()
ENDIF()

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)

#SET(LINKER_LANGUAGE CXX)
#SET(CMAKE_CXX_STANDARD 20)
#SET(CMAKE_CXX_STANDARD_REQUIRED ON)
#SET(CMAKE_CXX_EXTENSIONS ON)
#SET(THREADS_PREFER_PTHREAD_FLAD ON)

#SET(METAL_CPP_INCLUDE_DIRS)
SET(IMGUI_DIR ${PROJECT_SOURCE_DIR}/imgui)

IF(LINUX OR APPLE)
  LIST(APPEND CMAKE_PREFIX_PATH /usr/local/include)
ENDIF()

IF(DEBUG)
  ADD_DEFINITIONS(-DDEBUG)
ENDIF()

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Processor)

IF(USE_TEST)
  ENABLE_TESTING()
	ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/ProcessorTests)
ENDIF()

IF(NOT USE_TEST)
  ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/imgui)
  ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Simulator)
ENDIF()
