CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(
  6502_Simulator
  VERSION 1.0.0
  DESCRIPTION "6502 Simulator"
)

SET(PROJECT_APP ${PROJECT_NAME})
SET(LINKER_LANGUAGE CXX)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS ON)
SET(THREADS_PREFER_PTHREAD_FLAD ON)

FILE(GLOB MAIN_SOURCES ${PROJECT_SOURCE_DIR}/*.mm)

ADD_EXECUTABLE(${PROJECT_APP} MACOSX_BUNDLE ${MAIN_SOURCES})

SET(SIM_LIB)
SET(SIM_INCLUDE)

IF(APPLE)
  SET(CMAKE_FIND_FRAMEWORK ONLY)
  FIND_LIBRARY(COCOA_LIBRARY Cocoa)
  FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
  FIND_LIBRARY(IOKIT_LIBRARY IOKit)
  FIND_LIBRARY(COREVIDEO_LIBRARY CoreVideo)
  FIND_LIBRARY(METAL_LIBRARY Metal)
  FIND_LIBRARY(METALKIT_LIBRARY MetalKit)
  FIND_LIBRARY(QUARTZCORE_LIBRARY QuartzCore)

  TARGET_LINK_LIBRARIES(${PROJECT_APP} PUBLIC
    "-framework Metal"
    "-framework MetalKit"
    "-framework Cocoa"
    "-framework IOKit"
    "-framework CoreVideo"
    "-framework QuartzCore"
    "-framework OpenGL"
  )
 
  SET_TARGET_PROPERTIES(Processor PROPERTIES OUTPUT_NAME "Simulator"
                           MACOSX_BUNDLE_EXECUTABLE_NAME "Simulator"
                               MACOSX_BUNDLE_BUNDLE_NAME "Simulator"
                                                  FOLDER "Simulator"
                                              ##RESOURCE icon.icns
                      MACOSX_BUNDLE_SHORT_VERSION_STRING ""
                       MACOSX_BUNDLE_LONG_VERSION_STRING ""
                               ##MACOSX_BUNDLE_ICON_FILE icon.icns
                                MACOSX_BUNDLE_INFO_PLIST "${CMAKE_SOURCE_DIR}/MacOSXBundleInfo.plist.in"
  )
ELSEIF(WIN32)
  SET_TARGET_PROPERTIES(Processor PROPERTIES OUTPUT_NAME "Simulator")
ELSEIF(UNIX)
  SET_TARGET_PROPERTIES(Processor PROPERTIES OUTPUT_NAME "Simulator")
ENDIF()

TARGET_LINK_LIBRARIES(${PROJECT_APP} PUBLIC imgui Processor)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_APP} PUBLIC ${IMGUI_DIR} Processor)

FIND_PACKAGE(GLFW3 REQUIRED)
IF(GLFW3_FOUND)
  TARGET_INCLUDE_DIRECTORIES(${PROJECT_APP} PUBLIC ${GLFW3_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(${PROJECT_APP} PUBLIC ${GLFW3_LIBRARY})
ENDIF()

