CMAKE_MINIMUM_REQUIRED(VERSION 3.21)

PROJECT(
  metal_cpp
  DESCRIPTION "Apple Metal C++ Library"
  LANGUAGES CXX
)

SET(PROJECT_LIB ${PROJECT_NAME})

SET(CMAKE_VERBOSE_MAKEFILE ${CMAKE_VERBOSE_MAKEFILE})
SET(CMAKE_RULE_MESSAGES ${CMAKE_RULE_MESSAGES})

if (NOT CMAKE_OSX_DEPLOYMENT_TARGET)
  SET(CMAKE_OSX_DEPLOYMENT_TARGET "10.12")
endif()

if(CMAKE_OSX_DEPLOYMENT_TARGET GREATER_EQUAL 10.13)
  SET(${PROJECT_LIB}_HDR ${PROJECT_SOURCE_DIR}/metal-cpp_macOS13_iOS16)
elseif(CMAKE_OSX_DEPLOYMENT_TARGET GREATER_EQUAL 10.12)
  SET(${PROJECT_LIB}_HDR ${PROJECT_SOURCE_DIR}/metal-cpp_macOS12_iOS15)
else()
  message(FATAL_ERROR "No matching MacOS Version found")
endif()

SET(METAL_CPP_INCLUDE_DIRS ${${PROJECT_LIB}_HDR} PARENT_SCOPE)

SET(${PROJECT_LIB}_FOUNDATION ${${PROJECT_LIB}_HDR}/Foundation)
SET(${PROJECT_LIB}_METAL      ${${PROJECT_LIB}_HDR}/Metal)
SET(${PROJECT_LIB}_QUARTZCORE ${${PROJECT_LIB}_HDR}/QuartzCore)
SET(${PROJECT_LIB}_EXTENSIONS ${PROJECT_SOURCE_DIR}/metal-cpp-extensions)

FILE(GLOB FOUNDATION_FILES ${${PROJECT_LIB}_FOUNDATION}/*.hpp)
FILE(GLOB METAL_FILES ${${PROJECT_LIB}_METAL}/*.hpp)
FILE(GLOB QUARTZCORE_FILES ${${PROJECT_LIB}_QUARTZCORE}/*.hpp)
FILE(GLOB EXTENSIONS_FILES ${${PROJECT_LIB}_EXTENSIONS}/*.hpp)

ADD_LIBRARY(${PROJECT_LIB} INTERFACE
  ${${PROJECT_LIB}_FOUNDATION}/Foundation.hpp
  ${${PROJECT_LIB}_METAL}/Metal.hpp
  ${${PROJECT_LIB}_QUARTZCORE}/QuartzCore.hpp
)

ADD_LIBRARY(${PROJECT_LIB}_EXTENSIONS INTERFACE
  ${${PROJECT_LIB}_EXTENSIONS}/AppKit/AppKit.hpp
  ${${PROJECT_LIB}_EXTENSIONS}/MetalKit/MetalKit.hpp
)

SET_TARGET_PROPERTIES(${PROJECT_LIB} PROPERTIES
                                        VERSION  "${${PROJECT_NAME}_VERSION}"
                                LINKER_LANGUAGE  "CXX"
                                   CXX_STANDARD  "17"
                          CXX_STANDARD_REQUIRED  "ON"
                                 CXX_EXTENSIONS  "ON"
)

SET_TARGET_PROPERTIES(${PROJECT_LIB}_EXTENSIONS PROPERTIES
                                        VERSION  "${${PROJECT_NAME}_VERSION}"
                                LINKER_LANGUAGE  "CXX"
                                   CXX_STANDARD  "17"
                          CXX_STANDARD_REQUIRED  "ON"
                                 CXX_EXTENSIONS  "ON"
)


TARGET_INCLUDE_DIRECTORIES(${PROJECT_LIB} INTERFACE ${${PROJECT_LIB}_HDR})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_LIB}_EXTENSIONS INTERFACE ${${PROJECT_LIB}_EXTENSIONS})
TARGET_LINK_LIBRARIES(${PROJECT_LIB} INTERFACE
  "-framework Metal"
  "-framework Foundation"
  "-framework QuartzCore"
)
TARGET_LINK_LIBRARIES(${PROJECT_LIB}_EXTENSIONS INTERFACE ${PROJECT_LIB}
  "-framework MetalKit"
  "-framework AppKit"
)

TARGET_SOURCES(${PROJECT_LIB} INTERFACE ${FOUNDATION_FILES} ${METAL_FILES} ${QUARTZCORE_FILES})
TARGET_SOURCES(${PROJECT_LIB}_EXTENSIONS INTERFACE ${EXTENSIONS_FILES})
