SET(APP_NAME ImGuiDemo)
SET(APP_DIR "${PROJECT_SOURCE_DIR}/${APP_NAME}")

INCLUDE(Common)

ADD_EXECUTABLE(${APP_NAME})

SOURCE_GROUP(${APP_NAME} FILES
  #${PROJECT_SOURCE_DIR}/ImGuiDemo.mm
  ${APP_NAME}/ImGuiDemo.mm
)

INCLUDE(Common)

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES
  VERSION  "${${PROJECT_NAME}_VERSION}"
  LINKER_LANGUAGE  "${PROJECT_LINKER}"
)

TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE
  "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/${APP_NAME}>"
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)

set_compiler_version(
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED ON
  CXX_EXTENSIONS ON

  TARGET "${APP_NAME}"
)

IF(APPLE)
  set_compiler_version(
    OBJCXX_STANDARD 20
    OBJCXX_STANDARD_REQUIRED ON
    OBJCXX_EXTENSIONS ON
    TARGET "${APP_NAME}"
  )
  enable_language(OBJC OBJCXX)

  TARGET_SOURCES(${APP_NAME}
    PRIVATE
      ${APP_DIR}/ImGuiDemo.mm
  )
ENDIF()

COMMON_SET_TARGET_PROPERTIES()

target_link_libraries(${APP_NAME} PUBLIC imgui imgui-glfw)

IF(APPLE)
  target_link_libraries(${APP_NAME} PRIVATE imgui-metal)
ELSEIF(WIN32)
  target_link_libraries(${APP_NAME} PRIVATE imgui-opengl)
ENDIF()

common_create_install(NAME "${APP_NAME}" TARGETS "${APP_NAME}")
