SET(APP_NAME ImGuiDemo)
SET(APP_DIR "${PROJECT_SOURCE_DIR}/${APP_NAME}")

INCLUDE(Common)

ADD_EXECUTABLE(${APP_NAME})

GET_FILENAME_COMPONENT(PARENT_DIR ../../ ABSOLUTE)

INCLUDE(Common)

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES
  VERSION  "${${PROJECT_NAME}_VERSION}"
  LINKER_LANGUAGE  "${PROJECT_LINKER}"
)

TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PUBLIC
  "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/${APP_NAME}>"
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
  "$<BUILD_INTERFACE:${PARENT_DIR}>"
)

set_compiler_version(
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED ON
  CXX_EXTENSIONS ON

  TARGET "${APP_NAME}"
)

IF(APPLE)
  enable_language(OBJC OBJCXX)

  TARGET_SOURCES(${APP_NAME}
    PRIVATE
      ${APP_DIR}/ImGuiDemo.mm
  )
ENDIF()

COMMON_SET_TARGET_PROPERTIES()

target_link_libraries(${APP_NAME} PUBLIC imgui imgui-glfw)

IF(APPLE)
  target_link_libraries(${APP_NAME} PRIVATE imgui-metal)
ELSEIF(WIN32)
  target_link_libraries(${APP_NAME} PRIVATE imgui-opengl)
ENDIF()

common_create_install(NAME "${APP_NAME}" TARGETS "${APP_NAME}")
