SET(APP_NAME Simulator )
SET(APP_DIR "${PROJECT_SOURCE_DIR}/${APP_NAME}")

ADD_EXECUTABLE(${APP_NAME})

TARGET_SOURCES(${APP_NAME} PUBLIC
  FILE_SET HEADERS
  FILES
    ${APP_DIR}/Simulator.hpp
  PRIVATE
    ${APP_DIR}/Main.cpp
    ${APP_DIR}/Simulator.cpp
)

INCLUDE(Common)

TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE
  "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/${APP_NAME}>"
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)

set_compiler_version(
  CXX_STANDARD 20
  CXX_STANDARD_REQUIRED ON
  CXX_EXTENSIONS ON

  TARGET "${APP_NAME}"
)
TARGET_COMPILE_FEATURES(${APP_NAME} PUBLIC cxx_std_20)

#IF(APPLE)
#  set_compiler_version(
#    OBJCXX_STANDARD 20
#    OBJCXX_STANDARD_REQUIRED ON
#    OBJCXX_EXTENSIONS ON
#    TARGET "${APP_NAME}"
#  )
#  enable_language(OBJC OBJCXX)
#ENDIF()

COMMON_SET_TARGET_PROPERTIES()

target_link_libraries(${APP_NAME} PRIVATE imgui imgui-glfw imgui-opengl3)

IF(TARGET Processor)
  TARGET_LINK_LIBRARIES(${APP_NAME} PRIVATE Processor)
ELSE()
  FIND_PACKAGE(Processor REQUIRED)
  IF(Processor_FOUND)
    TARGET_LINK_LIBRARIES(${APP_NAME} PRIVATE Processor::Processor)
  ENDIF()
ENDIF()

TARGET_COMPILE_DEFINITIONS(Processor PRIVATE ${PROJECT_COMPILE_DEFINITIONS})

common_create_install(NAME "${APP_NAME}" TARGETS "${APP_NAME}")
